--- a/src/main/resources/templates/libros.html
+++ b/src/main/resources/templates/libros.html
@@ -13,28 +13,35 @@
 	<div class="container">
 		<div class="row">
 			<h1>Lista de Libros</h1>
+			
 
 		</div>
+		<a href="/libros/nuevo" class="btn btn-primary text-center mb-3">Añadir Libro</a>
+		
 		<table class="table table-striped table-bordered">
 			<thead class="table-dark">
 				<tr>
-					<th>ID</th>
-					<th>TITULO</th>
-					<th>AUTOR</th>
-					<th>PRECIO</th>
-					<th>FECHA DE LANZAMIENTO</th>
-					<th>ACCIONES</th>
+					<th class="text-center">ID</th>
+					<th class="text-center">TITULO</th>
+					<th class="text-center">AUTOR</th>
+					<th class="text-center">PRECIO</th>
+					<th class="text-center">FECHA DE LANZAMIENTO</th>
+					<th class="text-center">ACCIONES</th>
 				</tr>
 			</thead>
 			<tbody>
 			
 			<tr th:each="libro:${libros}">
-					<td th:text=${libro.id}>ID</td>
-					<td th:text=${libro.titulo}>TITULO</td>
-					<td th:text=${libro.autor}>AUTOR</td>
-					<td th:text=${libro.precio}>PRECIO</td>
-					<td th:text=${libro.fechaLanzamiento}>FECHA DE LANZAMIENTO</td>
-					<td>ACCIONES</td>
+					<td class="text-center" th:text=${libro.id}>ID</td>
+					<td class="text-center" th:text=${libro.titulo}>TITULO</td>
+					<td class="text-center" th:text=${libro.autor}>AUTOR</td>
+					<td class="text-center" th:text=${libro.precio}>PRECIO</td>
+					<td class="text-center" th:text=${libro.fechaLanzamiento}>FECHA DE LANZAMIENTO</td>
+					<td>
+					<a  th:href="@{/libros/editar/{id}(id=${libro.id})}" class="btn btn-info text-center">Editar</a>
+					
+					<a  th:href="@{/libros/{id}(id=${libro.id})}" class="btn btn-danger text-center">Eliminar</a>
+					</td>
 				</tr>
 			</tbody>
 		</table>
